crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@hoistable_local.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/hoistable_local.jsonnet
---
--- source ---
local outer = 1; local inner = 10 + 20; outer + inner
--- root analysis ---
object_dependent_depth: none
local_dependent_depth: 0
errored: false
--- diagnostics ---
   ·                        ╭────── local could be hoisted to an outer scope: inner
1  │ local outer = 1; local inner = 10 + 20; outer + inner 
2  │  
--- lir ---
LocalExpr(
    LLocalExpr {
        frame_shape: ClosureShape {
            captures: [],
            n_locals: 1,
        },
        binds: [
            LBind {
                destruct: Full(
                    LocalSlot(
                        0,
                    ),
                ),
                value_shape: ClosureShape {
                    captures: [],
                    n_locals: 0,
                },
                value: Num(
                    1.0,
                ),
            },
        ],
        body: LocalExpr(
            LLocalExpr {
                frame_shape: ClosureShape {
                    captures: [
                        Local(
                            LocalSlot(
                                0,
                            ),
                        ),
                    ],
                    n_locals: 1,
                },
                binds: [
                    LBind {
                        destruct: Full(
                            LocalSlot(
                                0,
                            ),
                        ),
                        value_shape: ClosureShape {
                            captures: [],
                            n_locals: 0,
                        },
                        value: BinaryOp {
                            lhs: Num(
                                10.0,
                            ),
                            op: Add,
                            rhs: Num(
                                20.0,
                            ),
                        },
                    },
                ],
                body: BinaryOp {
                    lhs: Slot(
                        Capture(
                            CaptureSlot(
                                0,
                            ),
                        ),
                    ),
                    op: Add,
                    rhs: Slot(
                        Local(
                            LocalSlot(
                                0,
                            ),
                        ),
                    ),
                },
            },
        ),
    },
)
