crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@mutual_recursion.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/mutual_recursion.jsonnet
---
--- source ---
local a = b, b = 1; a + 2
--- root analysis ---
object_dependent_depth: none
local_dependent_depth: 0
errored: false
--- diagnostics ---
--- lir ---
LocalExpr(
    LLocalExpr {
        frame_shape: ClosureShape {
            captures: [],
            n_locals: 2,
        },
        binds: [
            LBind {
                destruct: Full(
                    LocalSlot(
                        0,
                    ),
                ),
                value_shape: ClosureShape {
                    captures: [],
                    n_locals: 0,
                },
                value: Slot(
                    Local(
                        LocalSlot(
                            1,
                        ),
                    ),
                ),
            },
            LBind {
                destruct: Full(
                    LocalSlot(
                        1,
                    ),
                ),
                value_shape: ClosureShape {
                    captures: [],
                    n_locals: 0,
                },
                value: Num(
                    1.0,
                ),
            },
        ],
        body: BinaryOp {
            lhs: Slot(
                Local(
                    LocalSlot(
                        0,
                    ),
                ),
            ),
            op: Add,
            rhs: Num(
                2.0,
            ),
        },
    },
)
