crates/jrsonnet-evaluator/src/snapshots/jrsonnet_evaluator__analyze__tests__snapshots@nested_object_independent.jsonnet.snap
---
source: crates/jrsonnet-evaluator/src/analyze.rs
expression: rendered
input_file: crates/jrsonnet-evaluator/src/analysis_tests/nested_object_independent.jsonnet
---
--- source ---
{
  a: 1,
  b: {
    c: 2, d: self.c
  },
}
--- root analysis ---
object_dependent_depth: 1
local_dependent_depth: 1
errored: false
--- diagnostics ---
--- lir ---
Obj(
    MemberList(
        LObjMembers {
            frame_shape: ClosureShape {
                captures: [],
                n_locals: 1,
            },
            this: None,
            set_dollar: false,
            uses_super: false,
            locals: [],
            asserts: None,
            fields: [
                LFieldMember {
                    name: Fixed(
                        "a",
                    ),
                    plus: false,
                    visibility: Normal,
                    value: (
                        ClosureShape {
                            captures: [],
                            n_locals: 0,
                        },
                        Num(
                            1.0,
                        ),
                    ),
                },
                LFieldMember {
                    name: Fixed(
                        "b",
                    ),
                    plus: false,
                    visibility: Normal,
                    value: (
                        ClosureShape {
                            captures: [],
                            n_locals: 0,
                        },
                        Obj(
                            MemberList(
                                LObjMembers {
                                    frame_shape: ClosureShape {
                                        captures: [],
                                        n_locals: 1,
                                    },
                                    this: Some(
                                        LocalSlot(
                                            0,
                                        ),
                                    ),
                                    set_dollar: false,
                                    uses_super: false,
                                    locals: [],
                                    asserts: None,
                                    fields: [
                                        LFieldMember {
                                            name: Fixed(
                                                "c",
                                            ),
                                            plus: false,
                                            visibility: Normal,
                                            value: (
                                                ClosureShape {
                                                    captures: [],
                                                    n_locals: 0,
                                                },
                                                Num(
                                                    2.0,
                                                ),
                                            ),
                                        },
                                        LFieldMember {
                                            name: Fixed(
                                                "d",
                                            ),
                                            plus: false,
                                            visibility: Normal,
                                            value: (
                                                ClosureShape {
                                                    captures: [],
                                                    n_locals: 0,
                                                },
                                                Index {
                                                    indexable: Slot(
                                                        Local(
                                                            LocalSlot(
                                                                0,
                                                            ),
                                                        ),
                                                    ),
                                                    parts: [
                                                        LIndexPart {
                                                            span: virtual:<test>:35-36,
                                                            value: Str(
                                                                "c",
                                                            ),
                                                        },
                                                    ],
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                        ),
                    ),
                },
            ],
        },
    ),
)
